[project]
name = "code-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.37.1",
    "biopython>=1.86",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "seaborn>=0.13.2",
]
